# DeepFields---Depth-From-Focus

./: .gitignore  Makefile  README.md  depth_generation.py  pyproject.toml
Blender Code/: blender.txt  blender_poses_automation.py  poses_computation.py
VAE/: dataloader.py  decoder.py  encoder.py  model.py  test.py  test_som.py  train.py  utils.py
VAE/checkpoint/Scene_1_128_latent/: vae_Scene_1_128_layer_1.pth  vae_Scene_1_128_layer_10.pth  vae_Scene_1_128_layer_100.pth  vae_Scene_1_128_layer_11.pth  vae_Scene_1_128_layer_12.pth  vae_Scene_1_128_layer_13.pth  vae_Scene_1_128_layer_14.pth  vae_Scene_1_128_layer_15.pth  vae_Scene_1_128_layer_16.pth  vae_Scene_1_128_layer_17.pth  vae_Scene_1_128_layer_18.pth  vae_Scene_1_128_layer_19.pth  vae_Scene_1_128_layer_2.pth  vae_Scene_1_128_layer_20.pth  vae_Scene_1_128_layer_21.pth  vae_Scene_1_128_layer_22.pth  vae_Scene_1_128_layer_23.pth  vae_Scene_1_128_layer_24.pth  vae_Scene_1_128_layer_25.pth  vae_Scene_1_128_layer_26.pth  (+80 more)
docs/: mkdocs.yml
docs/docs/: index.md
dof/: README.md  __init__.py  dataset.py  utils.py
notebooks/: MLP.ipynb  create_ground_truth.ipynb  eda.ipynb  eda_MAX_STD.ipynb  eda_zero_depth.ipynb  pixels_analysis.ipynb  volume_reconstruction.ipynb
spatial_training/: README.md  compute_training_pickels.py  dataset.py  integral_dataset.py  integral_utils.py  model.py  predict.py  predict_integral.py  train.py  train_integral.py  utils.py
utils/: compute_accuracy.py  compute_local_std.py  depth_correction.py  my_idea.py  test_something.py  variance_computation_AOS.py  visualize_STD.py
(+2791 files in other folders)
